--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "react-portfolio",
+  "homepage": "https://omkar04gaikwad.github.io/Omkar_Gaikwad/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -16,9 +17,11 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+  "build": "react-scripts build",
+  "test": "react-scripts test",
+  "eject": "react-scripts eject",
+  "predeploy": "npm run build",
+  "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
